turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:79: error: value */ is not a member of Unit
possible cause: maybe a semicolon is missing before `value */'?
  }*/
   ^